Style fix: collapsed borders for adjacent grouped input elements

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -73,6 +73,10 @@
 	&>.btn:last-child {
 		@apply rounded-r-sm;
 	}
+
+	&>.input+.input{
+		@apply border-l-0;
+	}
 }
 
 div.input {
